Fixed - Align Header Title

--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  text-align: center;
 
   color: white;
   position: relative;
